# cargo-template-lib

./: Cargo.toml
benches/: example.rs
