[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
readme = "README.md"
publish = false

[dependencies]

[lints.clippy]
complexity = "deny"

nursery = { level = "deny", priority = -1 }
redundant_pub_crate = "allow"

pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
