[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
readme = "README.md"
publish = false

[dependencies]

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "test"
harness = false

[lints.clippy]
complexity = "deny"

nursery = { level = "deny", priority = -1 }

pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
